k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tx-builder
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tx-builder
  template:
    metadata:
      labels:
        app: tx-builder
    spec:
      containers:
      - name: tx-builder
        image: jakeolo/mayan-tx-builder:v0.3
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        imagePullPolicy: Always
