k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tx-builder
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: tx-builder
  type: ClusterIP
